2010-04-06  Murray Cumming  <murrayc@murrayc.com>

    RecentAction: Fix the constructor that takes a RecentManager.

	* gtk/src/recentaction.hg: Constructor: Rename the manager parameter to
    recent_manager, so that gmmproc generates code that uses the correct 
    property name.
    This fixes bug #612900 (Morten Skaaning)

2010-04-06  Murray Cumming  <murrayc@murrayc.com>

    TreeRowReference::get_model(): Correct the reference counting.

	* gtk/src/treerowreference.hg: get_model(): Add a refreturn.
    This fixes bug #611814 (Kamil Renczewski)

2010-04-03  Armin Burgmeier  <armin@arbur.net>

	* win32_installer/gtkmm-vc80-2_4.vsprops:
	* win32_installer/gtkmm-vc80-d-2_4.vsprops:
	* win32_installer/gtkmm-vc90-2_4.vsprops:
	* win32_installer/gtkmm-vc90-d-2_4.vsprops: Remove iconv.lib which is
	no longer required by the libxml2 binary.

	* win32_installer/install-msvc-module:
	* win32_installer/gtkmm-installer.nsi.in: Update for the 2.20
	installer.

2010-04-03  Armin Burgmeier  <armin@arbur.net>

	* gtk/gtkmm.h: Ifdef out inclusion of files that are no longer
	installed on Windows.

2010-04-03  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
	* MSVC_Net2008/gtkmm/gtkmm.vcproj: Add the new source files to the
	projects.

2.20.0:

2010-03-23  Murray Cumming  <murrayc@murrayc.com>

    Fix small API problems found by Jonathan Jongsma.
 
	* tools/extra_defs_gen/generate_defs_gtk.cc: Add ToolPalette, ToolItemGroup, 
    OffscreenWindow.
	* gtk/src/gtk_signals.defs: Add new .defs.

	* gtk/src/offscreenwindow.hg: Added const versions of get_pixbuf() and 
    get_pixmap() 
	* gtk/src/range.hg: Make get_slider_range() const.
	* gtk/src/spinner.hg:
	* gtk/src/toolitemgroup.hg: Add @newin tags.
	* gtk/src/toolpalette.hg: Fix a double @@ in the newin tag.
    Remove exclusive property (it is really a child property).
    Derive from (and implement) ToolShell.

2010-03-22  Murray Cumming  <murrayc@murrayc.com>
