@@ -1248,7 +1248,7 @@ Generates a string representation of the iter. This string is a &apos;:&apos;
 separated list of numbers. For example, &quot;4:10:0:3&quot; would be an
 acceptable return value for this string.
 
-@newin2p2
+@newin{2,2}
 </description>
 <parameters>
 <parameter name="tree_model">
@@ -1837,7 +1837,7 @@ the place determined by @path.
 
 @see add_ui_separator().
 
-@newin2p4
+@newin{2,4}
 
 </description>
 <parameters>
@@ -2151,7 +2151,7 @@ Same as gtk_text_iter_forward_search(), but moves backward.
     This may have been explicitly set by set_image()
     or specified as a stock item to the constructor.
 
-    @newin2p6
+    @newin{2,6}
 
   </description>
   <parameters>
@@ -2316,7 +2316,7 @@ Since: 2.6
     The stock_id property only has an effect if not
     overridden by &quot;label&quot; and &quot;icon_widget&quot; properties.
 
-    @newin2p4
+    @newin{2,4}
 
   </description>
   <parameters>
