@@ -1,3 +1,11 @@
+2010-04-07  Murray Cumming  <murrayc@murrayc.com>
+
+    Replace some @newin2p* with @newin{2,*}.
+ 
+	* gdk/src/gdk_docs_override.xml:
+	* gtk/src/gtk_docs_override.xml: Replaces uses of the old @newin2p* with 
+    @newin{2,*} after I noticed it in generated HTML.
+
 2010-04-06  Murray Cumming  <murrayc@murrayc.com>
 
     RecentAction: Fix the constructor that takes a RecentManager.
